kubernetes/apps/metal/metal/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox
  namespace: metal
spec:
  parentRefs:
    - name: apps
      namespace: envoy-gateway-system
  hostnames:
    - proxmox.geod.es
  rules:
    - backendRefs:
        - name: oauth2-proxy-proxmox
          port: 4180
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas
  namespace: metal
spec:
  parentRefs:
    - name: apps
      namespace: envoy-gateway-system
  hostnames:
    - truenas.geod.es
  rules:
    - backendRefs:
        - name: oauth2-proxy-truenas
          port: 4180
